# SCPI-CPP

./: .gitignore  README.md
script/: linux.sh  msbuild-windows.bat  ninja-windows.bat
src/: CMakeLists.txt
src/app/cpp/: example.cpp  main.cpp  simulator.cpp
src/app/include/: example.hpp
src/cmake/: my_routine.cmake
src/commands/cpp/: commands.cpp  ieee488_2.cpp  scpi_memory.cpp  scpi_source_function.cpp  scpi_source_safety.cpp  scpi_system.cpp
src/commands/include/: commands.hpp  ieee488_2.hpp  scpi_memory.hpp  scpi_source_function.hpp  scpi_source_safety.hpp  scpi_system.hpp
src/commands/test/: ieee488_2_test.cpp  scpi_memory_test.cpp  scpi_source_function_test.cpp  scpi_source_safety_test.cpp  scpi_system_test.cpp  test.cpp
src/logging/cpp/: channel-demo.cpp  logging.cpp
src/logging/include/: logging.hpp
src/options/cpp/: options.cpp
src/options/include/: options.hpp
src/options/test/: test.cpp
src/pybind/cpp/: pyscpi2.cpp
src/serialport/cpp/: serialport.cpp
src/serialport/include/: serialport.hpp
src/serialport/test/: test.cpp
tools/: get_cmds.py  make_cpp.py  serial_port_echo.py  source_maker.py  virtualcom.py
